# walkerbot

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: walker.hpp
launch/: walker_bot.launch  walkerbot.launch
results/: cppcheck_output.txt  cpplint_output.txt
src/: main.cpp  walker.cpp
